--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "set port=8000 && react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "format": "yarn prettier --write .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
