--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,37 @@
 {
-  "short_name": "Submaker",
-  "name": "Buy subdomains",
+  "name": "Mits Web",
+  "short_name": "Mits Web",
+  "theme_color": "#3f51b5",
+  "background_color": "#fff",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-medium.png",
-      "type": "image/png",
-      "sizes": "128x128"
+      "src": "logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "icon-large.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "logo256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "logo384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
