--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_NAME=Skosh
-REACT_APP_API_URL=http://localhost:3001
+REACT_APP_BASE_URL=http://localhost:4000
+REACT_APP_MAIN_URL=http://localhost:8000
