--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "color-calendar": "^1.0.5",
     "date-fns": "^2.20.1",
     "hookrouter": "^1.2.3",
     "materialize-css": "^1.0.0",
