dd upload files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "clsx": "^1.1.1",
     "color-calendar": "^1.0.5",
     "date-fns": "^2.20.1",
+    "filepond": "^4.27.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.6",
     "hookrouter": "^1.2.3",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
@@ -25,6 +28,7 @@
     "react": "^16.13.1",
     "react-csv-reader": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.1.1",
     "react-google-login": "^5.2.2",
     "react-qr-code": "^1.1.1",
     "react-qr-reader": "^2.2.1",
