--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.5.0",
     "pnotify": "^5.1.2",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.33.5",
     "react-csv-reader": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.1.1",
@@ -37,6 +38,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^9.2.1",
+    "react-tackle-box": "^2.1.0",
     "react-virtualized": "^9.22.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
